# tauri_app_mvp

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.claude/agents/: code-reviewer.md  react-development-using-shadcn-mcp.md
docs/: 01_react_setup.md  02_rust_setup.md  03_tauri_setup.md  04_create_tauri_app.md  05_employee_data_upload_plan.md  06_acp_and_agent_sdk.md  07_acp_chat_implementation_plan.md  08_rust_to_claude_acp_guide.md  09_how_acp_works.md  10_acp_limitations.md  11_multi_agent_pipeline_plan.md  12_multi_agent_system_design.md  13_coordinator_and_orchestrator.md  14_why_agent_client_protocol_crate.md  acp-architecture.md  mcp-servers-acp-workaround.md  tauri_v1_official_guide_analysis.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  acp-preload.cjs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/acp/: client.rs  commands.rs  mod.rs  reader.rs  state.rs  types.rs
src-tauri/src/agents/: commands.rs  storage.rs  types.rs
src-tauri/src/pipelines/: commands.rs  storage.rs  types.rs
src-tauri/src/projects/: commands.rs  storage.rs
src-tauri/src/tasks/: commands.rs  storage.rs  types.rs
src/components/: ChatMessage.tsx  ChatPanel.tsx  DeleteConfirmDialog.tsx  EmployeeDetail.tsx  EmployeeForm.tsx  EmployeeList.tsx  ImageUpload.tsx  Layout.tsx  SearchBar.tsx
src/hooks/: useAgents.ts  useChat.ts  useEmployees.ts  usePipelineRunner.ts  usePipelines.ts  useProjects.ts  useTaskRunner.ts
src/styles/: chat.css  components.css
src/types/: agent.ts  (+4 more)
(+20 files in other folders)
