[package]
name = "agent-creator"
version = "0.1.0"
description = "Agent Creator — build and run custom Claude agents"
authors = ["you"]
edition = "2021"

[lib]
name = "agent_creator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
agent-client-protocol = "0.10"
async-trait = "0.1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
